2004-11-04  David Schleef  <ds@schleef.org>

	* README: add dependency on liboil
	* player/swf_play.c: (main), (do_help), (new_window),
	(sound_setup), (render_idle_audio), (fd_is_ready), (packet_get):
	Cleanup.

2004-11-04  David Schleef  <ds@schleef.org>

	* README: random fixes
	* libswfdec/swf.c: (swfdec_decoder_set_image_size): change scaling
	back to browser-friendly policy.
	* libswfdec/swfdec_render.c: (swfdec_render_iterate): change eof
	policy back to being browser-friendly
	* libswfdec/swfdec_shape.c: (swfdec_shape_compose_gradient),
	(my_root): optimization for circular gradients
	* player/Makefile.am: include plugin dir for spp.h
	* player/swf_play.c: (main), (do_help), (sound_setup),
	(render_idle_audio), (packet_get), (packet_free): Add SPP protocol
	handling.  Additional fixes to make plugin work again.
	* plugin/plugin.c: (plugin_fork), (plugin_newp), (plugin_destroy),
	(plugin_set_window), (plugin_destroy_stream), (plugin_write),
	(plugin_stream_as_file), (NP_GetValue), (NP_Initialize),
	(NPP_DestroyStream), (packet_write): Add SPP protocol handling.
	Other random fixes.
	* plugin/spp.h: SPP protocol.

2004-10-26  David Schleef  <ds@schleef.org>

	* player/swf_play.c: (render_idle_audio): endianness fixes

2004-10-08  David Schleef  <ds@schleef.org>

	* Makefile.am: player no longer depends on glib
	* glib-compat/glib-object.h: new
	* glib-compat/glib.h: more compatibility
	* glib-compat/glib/Makefile.am: add gobject.c
	* glib-compat/glib/gobject.c: (g_type_init), (g_type_name),
	(g_object_new), (g_object_unref): 
	* libswfdec/jpeg/Makefile.am:
	* libswfdec/swfdec_debug.c: (swfdec_debug_log): glib-compat stuff
	* libswfdec/swfdec_display.c: (tag_func_place_object_2),
	(tag_func_remove_object), (tag_func_remove_object_2): remove g_print()
	* libswfdec/swfdec_font.h: glib-compat
	* libswfdec/swfdec_image.h: same
	* libswfdec/swfdec_object.c: same
	* libswfdec/swfdec_object.h: same
	* libswfdec/swfdec_render.c: (swfdec_render_get_image): same