@@ -8,7 +8,7 @@ dnl *NOTE*: dnl this line before release, so release does static too
 dnl AM_DISABLE_STATIC
 
 dnl when going to/from release please set the nano (fourth number) right !
-AS_VERSION(swfdec, SWFDEC, 0, 3, 0, 0)
+AS_VERSION(swfdec, SWFDEC, 0, 3, 1, 0)
 SWF_DEBUG="-Wall -Werror"
 AM_INIT_AUTOMAKE($PACKAGE,$VERSION)
 AS_LIBTOOL(SWFDEC, 0, 1, 0, yes)
