@@ -7,6 +7,8 @@ else
 plugin_LTLIBRARIES = 
 endif
 
+noinst_HEADERS = spp.h
+
 libmozswfdec_la_SOURCES = plugin.c
 libmozswfdec_la_CFLAGS = $(MOZILLA_CFLAGS) $(X_CFLAGS) -DBINDIR=\"$(bindir)\"
 libmozswfdec_la_LDFLAGS = -module -avoid-version $(X_LIBS)
